external-crates/move/crates/move-compiler/tests/move_2024/typing/macros_have_unique_scopes_unhygienic_capture.exp
error[E03009]: unbound variable
   ┌─ tests/move_2024/typing/macros_have_unique_scopes_unhygienic_capture.move:15:17
   │
15 │         foo!(|| x);
   │                 ^ Unbound variable 'x'

error[E03009]: unbound variable
   ┌─ tests/move_2024/typing/macros_have_unique_scopes_unhygienic_capture.move:16:17
   │
16 │         bar!(|| x);
   │                 ^ Unbound variable 'x'

